--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ans-base-ui",
-  "version": "1.0.0",
+  "version": "0.0.2",
   "description": "A suite of React components by ANS - ans.co.uk",
   "main": "lib/index.js",
   "scripts": {
@@ -19,39 +19,9 @@
     "React"
   ],
   "peerDependencies": {
-    "react": ">=15",
-    "react-dom": ">=15",
-    "react-icons": ">=3.5"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.3.4",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.0.0",
-    "@pickra/copy-code-block": "^1.1.2",
-    "@storybook/addon-actions": "^5.0.1",
-    "@storybook/addon-knobs": "^5.0.1",
-    "@storybook/addon-links": "^5.0.1",
-    "@storybook/addon-storysource": "^5.0.1",
-    "@storybook/addon-viewport": "^5.0.1",
-    "@storybook/addons": "^5.0.1",
-    "@storybook/react": "^5.0.1",
-    "babel-loader": "^8.0.5",
-    "css-loader": "^2.1.1",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-standard": "^4.0.0",
-    "normalize.css": "^8.0.1",
-    "react-scripts": "^2.1.8",
-    "rimraf": "^2.5.2",
-    "sass-loader": "^7.1.0",
-    "storybook-addon-react-docgen": "^1.1.5",
-    "style-loader": "^0.23.1"
+    "react": ">=16",
+    "react-dom": ">=16",
+    "react-icons": ">=3.5.0"
   },
   "browserslist": [
     ">0.2%",
@@ -70,5 +40,6 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-icons": "^3.5.0"
-  }
+  },
+  "gitHead": "028c38919c056648e6ef9137de78fe557cb7dc55"
 }
