--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "ans-base-ui",
-  "version": "0.0.2",
+  "version": "0.5.0",
   "description": "A suite of React components by ANS - ans.co.uk",
   "main": "lib/index.js",
   "scripts": {
     "clean": "rimraf lib",
-    "compile": "babel src --loose --out-dir lib --copy-files",
+    "compile": "npx babel src --loose --out-dir lib --copy-files",
     "prepublish": "npm run prepare",
-    "prepare": "npm run clean && npm run compile",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "prepare": "npm run compile",
+    "dev": "babel src --loose --out-dir lib --copy-files --watch --source-maps inline",
+    "storybook": "npx start-storybook -p 6006",
+    "build-storybook": "build-storybook -c .storybook -o .out",
+    "deploy-storybook": "storybook-to-ghpages"
   },
   "repository": {
     "type": "git",
@@ -36,10 +38,33 @@
   },
   "homepage": "https://github.com/ans-group/base-ui#readme",
   "dependencies": {
+    "cleave.js": "^1.4.10",
+    "moment": "^2.24.0",
     "node-sass": "^4.11.0",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-icons": "^3.5.0"
+    "react": "^16.8.6",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-dom": "^16.8.6",
+    "react-icons": "^3.5.0",
+    "validator": "^10.11.0"
   },
-  "gitHead": "028c38919c056648e6ef9137de78fe557cb7dc55"
+  "gitHead": "9d91e7a32af85c5c4d9639bc2ed8b9060e37c31d",
+  "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.4.0",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-transform-runtime": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.4.0",
+    "@storybook/addon-a11y": "^5.0.6",
+    "@storybook/addon-backgrounds": "^5.0.6",
+    "@storybook/react": "^5.0.6",
+    "@storybook/storybook-deployer": "^2.8.1",
+    "dedent": "^0.7.0",
+    "faker": "^4.1.0",
+    "react-scripts": "^2.1.8",
+    "rimraf": "^2.6.3",
+    "storybook-addon-jsx": "^7.1.0",
+    "storybook-addon-react-live-edit": "^2.0.2"
+  }
 }
