--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
   "description": "A suite of React components by ANS - ans.co.uk",
   "main": "lib/index.js",
   "scripts": {
-    "clean": "rimraf lib",
-    "compile": "npx babel src --loose --out-dir lib --copy-files",
-    "dev": "babel src --loose --out-dir lib --copy-files --watch --source-maps inline",
-    "storybook": "start-storybook -p 9009",
-    "build-storybook": "build-storybook",
-    "deploy-storybook": "storybook-to-ghpages"
+    "clean": "rimraf docs",
+    "storybook": "start-storybook -p 9009 -s public",
+    "build-storybook": "npm run clean && build-storybook -o docs -s public"
   },
   "repository": {
     "type": "git",
@@ -58,9 +55,11 @@
     "@babel/register": "^7.8.6",
     "@storybook/addon-a11y": "^5.3.14",
     "@storybook/addon-actions": "^5.3.14",
+    "@storybook/addon-backgrounds": "^5.3.14",
     "@storybook/addon-info": "^5.3.14",
     "@storybook/addon-knobs": "^5.3.14",
     "@storybook/addon-links": "^5.3.14",
+    "@storybook/addon-storysource": "^5.3.14",
     "@storybook/addon-viewport": "^5.3.14",
     "@storybook/addons": "^5.3.14",
     "@storybook/preset-create-react-app": "^2.0.0",
