--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "dedent": "^0.7.0",
     "faker": "^4.1.0",
     "react-scripts": "^3.4.0",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "storybook-addon-jsx": "^7.1.14"
   }
 }
